--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple authentication API with NodeJS + MongoDB + Express",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pedro Ganem",
@@ -12,10 +13,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
-    "express": "^4.18.0",
+    "express": "^4.18.1",
     "express-unless": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.2"
   },
   "engines": {
     "node": "17.x"
